--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rate-repository-app",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "expo": "~51.0.26",
+    "expo-constants": "~16.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "expo-constants": "~16.0.2"
+    "expo-router": "~3.5.23",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "expo-linking": "~6.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
