--- a/package.json
+++ b/package.json
@@ -12,18 +12,21 @@
   "dependencies": {
     "expo": "~51.0.26",
     "expo-constants": "~16.0.2",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.23",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "expo-router": "~3.5.23",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "expo-linking": "~6.3.1"
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "eslint": "^8.57.0",
-    "eslint-config-expo": "^7.1.2"
+    "eslint-config-expo": "^7.1.2",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "prettier": "^3.3.3"
   },
   "private": true
 }
